# Blackjack

./: .gitattributes  .gitignore  Cargo.toml  README.md
csrc/: blackjack.c
include/: blackjack.h
lib/: bridge.rs  card.rs  cards.rs  lib.rs  player.rs
src/: cards.rs  main.rs
tests/: tests.rs
