[package]
name = "blackjack"
version = "0.1.0"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>", "Fatcat560/Mario Spies"]
edition = "2018"
description = "Crate for the popular casino card game Blackjack"
homepage = "https://arc676.github.io/projects/blackjack.html"
repository = "https://github.com/Arc676/Blackjack"
readme = "README.md"
license = "GPL-3.0-only"
license-file = "LICENSE"
exclude = ["csrc/*", "include/*", "target/*"]
keywords = ["blackjack", "casino", "card", "gambling", "library"]
categories = ["game-engines"]

[dependencies]
rand = "0.3.14"

[lib]
name = "blackjack"
path = "lib/lib.rs"
crate-type = ["lib", "staticlib", "dylib"]

[[bin]]
name = "blackjack"
path = "src/main.rs"
